# ArUco-Markder-Detector

./: .gitignore  README.md  charuco_camera_calibration.yaml  detector.py
config/: pip.conf
utils/: CMakeLists.txt
